# modelpipeline

./: .gitignore  AGENTS.md  README.md  ROADMAP.md  generate_icon.py  launch_gui.ps1  requirements.txt
.agent/: BOOTSTRAP.md
data/: .gitkeep
src/: __init__.py  api.py
src/agent/: __init__.py  actions.py  graph.py  hooks.py  memory.py  model.py  runner.py  state.py  tasks.py
src/environment/: executor.py
src/training/: __init__.py  pipeline.py
src/vectorstore/: __init__.py  embedder.py  store.py
tools/: cli.py  test_file_search.py  test_memory_index.py  test_observation.py  test_task_create.py  test_vector_retrieval.py
ui/frontend/: index.html
ui/src-tauri/: .taurignore  Cargo.toml  tauri.conf.json
ui/src-tauri/data/: tasks.jsonl
ui/src-tauri/data/trajectories/: events.jsonl
ui/src-tauri/src/: main.rs
