[package]
name = "agent-framework"
version = "0.1.0"
description = "Agent Framework - Tauri Shell"
authors = []
edition = "2021"

[build-dependencies]
tauri-build = { version = "1.5", features = [] }

[dependencies]
tauri = { version = "1.6", features = [ "window-hide", "window-set-position", "window-minimize", "window-close", "window-set-title", "window-set-focus", "window-start-dragging", "window-show", "window-maximize", "window-unminimize", "window-unmaximize", "window-set-size", "shell-open"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]
